@@ -1,12 +1,7 @@
-DIST genpatches-4.19-93.base.tar.xz 2753264 BLAKE2B f73900a43a478378851fe125f71af01322f01d848bcfe5968cbda3dcb30224e917c6ff7eb3bbda25d336b7b9d10236f7b3afa3bc5235139515d189844abfb627 SHA512 77a3f0e51f41b42beea503b6684dd2436219af998ac8c6b773e944dc6172855340199f2c9f7e7d66d5fca41ff773c3d9a40c1fa521739c52c415632fe3a4395f
-DIST genpatches-4.19-93.extras.tar.xz 17504 BLAKE2B 349ef4c6909679001c0f20d31b694799b6b5a38a6f315833930c5c47d90a0de887e9e28954e1e5560f4e2bf522ce81c8379e3cf789cf395e2451689edd314cbc SHA512 1b1c6578d4c79fe8ad0048fd0a304b1731764b7512116e5779c59980f8f86021c4435562fe49e8d7e91c0bad0e204de2338226d63123ce35ea8a9e5533e074c6
-DIST genpatches-5.4-10.base.tar.xz 391596 BLAKE2B 8ee4da95c032e586bd72f7147f76e2423486a96dc69c8251e5913ffd9c22f31daf66a134f65bf11ed4feb7fd8e3c7cbb7ee93752dd5cff81787dffb87d294ccb SHA512 dff22f648a27c46fe5500186ad780d106a37bbd3bff37020947dd9e2661a0f24954347ca93f526a963ab4993bee4e0a14aad06870cce82479fc0987c621f0e50
-DIST genpatches-5.4-10.extras.tar.xz 1740 BLAKE2B 804259c95725a2366baf8254e518c11077efbf207612b58193748983e10a0e0270bcd2fa8270a7a7321f49a04112ed9688788c922fba77dced3cb704d2645d1c SHA512 abb1e10bf19fffeb66c93f6dc83333b8dcdef8a6b0d6c2b3f00e97cf42258de1c441ae1455750275bc4c311de9fd7b0905990bc842d837890738665341d75918
-DIST linux-4.19.85-arch1.i686.config 222183 BLAKE2B 03eac77940db0ee6b4f2a006edc600ef34141bbca849f5be4de9b961301a8fc987da6d0e21344aa5d80c29bb7793d56cf5441abb6c8e4057d94e2601c174c1be SHA512 6bd45c9dfd96b1afb8c1ca1ca72722baee6c91894e454d7af937de02242d3bb9d3b6870f5976aa96245c753c6bc1ac637a6356125b0d4c596aadef643b8c3d8d
-DIST linux-4.19.92-arch1.amd64.config 222487 BLAKE2B a658d80d85525287a1df9053ca2ddfe423ab423bcc3b9ea8bd9cda65cc7ffa4b1be782c48c867c13e46070af4016f446860f5cf71351f239da1eff6c45a5aa6a SHA512 a5658c8e8464516dffd6f624344e739784cb315d334b2c5105bd5d16022b6366ad4ec00d3692a7b78e2458514175522bc85e834bf19593feff6363b616860258
-DIST linux-4.19.94.tar.xz 103389152 BLAKE2B 291db6f448606a4ba288295b4b1c0b813e736534e4749a152baa1d07fcf52bba2b59e7b4b261594a2deb9ad961afec50a28b4ec126f97033f1c0a36aba9f2961 SHA512 c6017e854ec06054c658042c2e8227d79284ecdadf0a2e1c5da799ca2ac165a266e7d33aa52361d0036ddb3059e3b24f0a68b45ffd84d87394d3f41492f6f9a4
-DIST linux-5.4.3-arch1.i686.config 241295 BLAKE2B 795b6286bd1e7dc6aa5c1428e7bf08c204ce6c8cbee57863e9f64f8990790cc4398a7d062b54c89b1b80640f02a40fce028d9397725db0f968e8028b0611a20f SHA512 8c7387ded21c02b9cffee0e6d61a7040c44deae21764f743f7719f0d1c7adf684f6b62a501fe31709787ba741859e55fc3b8a3d3d27e52c09f2d8604212bf0a7
-DIST linux-5.4.7.arch1-1.amd64.config 241598 BLAKE2B 536cce5cc23cf20e71cba7468a125557f85d8ffc3cb194dced79bd489d39f2e4ed3960816d15d1491007d11b3af466e0a74267f983dfcc5f511f9f566f7e9821 SHA512 8658db603e180c75caf76972d85ecf8a4e9c9cf6e047b4f9fc7cba0fa426f434361528c1c29b5580f116cdd23091bf9afb6635d751f3b90c4e968d16db90eac1
-DIST linux-5.4.tar.xz 109441440 BLAKE2B 193bc4a3147e147d5529956164ec4912fad5d5c6fb07f909ff1056e57235834173194afc686993ccd785c1ff15804de0961b625f3008cca0e27493efc8f27b13 SHA512 9f60f77e8ab972b9438ac648bed17551c8491d6585a5e85f694b2eaa4c623fbc61eb18419b2656b6795eac5deec0edaa04547fc6723fbda52256bd7f3486898f
-DIST tinycorelinux-10.1-amd64.qcow2 16842752 BLAKE2B e013e76503c335739a9623c0901ca791937a0e6b177854535cadec1e2c2cd2df588283ed3128cf652595f32264fbfe5b3bd3a8c97665fd4da344e308535be366 SHA512 c3aeb20ff8769da9211694b7f701907cc7ae7582cdfad2c2fdc008d97ebcbd9dc08245b4e8f8450e1cb304bd705345a11fe79f901a47979fee91443841d55641
-DIST tinycorelinux-10.1-x86.qcow2 14876672 BLAKE2B 3c760eb7438b13261e52ecfaa33a53649ced95f1ab40aae52134b8cdc31a16d7aa0d6a6dd716e268ed148e9d77a10b7c700b141b61d70c82d271ffe88e8e2a3c SHA512 9964538dc42f232a11949f74b61d46422ea5da3bdc253a217119bd0b8a750c40fd2da0b07157067be9ac0226472614f210a1248114df0d331df390979867a895
+DIST genpatches-3.12-71.base.tar.xz 1931704 BLAKE2B c2dc6cef51f7145e04f649b7bbbeb0222426ab824c366d5a85f04878b87de86152b6fde10983b20be503de06dd5a425cdeca5d45fec3cb8952901ef563b2c23c SHA512 90815b70475223d1635b87cd8ea400f6d001ace35cdc139a2b8f0f542d6d06242152eae6a9d955126a98a89bcc7a732b29a725cca2d5d5887aa04cc29b6dba5d
+DIST genpatches-3.12-71.extras.tar.xz 18496 BLAKE2B e12edd22a44c42f1171bbf153c27b48789f55a7c05fd7918c056adb2c08b4c58b6bd616792f785e8fe1082e37b057c7ca3e557a19c3cd98ac5ed4df9219d080b SHA512 2545956f8d9ebcc9a5ec0429d492c8b5c23d8d89fdd46ec595e82310f480658543d364bbc47f6527e438ce3d352e17c7ea3431e3589e2c51f5447a504dbd9d7b
+DIST linux-3.10.45-arch1.amd64.config 143793 BLAKE2B f81409a31493107198a863dd0569a7958861b6d95ad4320b3f9975e802a3efc4a0e4c40cde5f59055770b7b47aa24db33da063aca93c5b43a801cac8156b0160 SHA512 6c25ab34f8b625b6df46f95954ff3892d85f4638849d73f3d4b27dd4aa7b826d7f21bfbe3a583425d08523428db6e193d2cafd29ec20e517b7731af067ac23c5
+DIST linux-3.12.72.tar.xz 76581176 BLAKE2B d88520400de40d595c294bbae83b8f2c5f11cc7db0977b5c553124858480c8b7fa6fd076b091ad0aa20c484c3ef3f9b0ebad2af67a9e1cdfaad4c14263df3900 SHA512 ddbd181ad6d2e939a28f1e2e08f58cd308a8d32ce3f575fcfc3d0f174557426f45d8f3c3a062c42f046a4501d4253cf495139ef52e59d96461b50d96cdc9b46b
+EBUILD gentoo-kernel-3.12.72.ebuild 1556 BLAKE2B 30269ed3894d57262ae857d271bd938392efb6b58c9af2816f90249337fab39109027aa82ef3fe2100c094f197e9ac3a9ae2601128051abc2b658c9ce1aa382d SHA512 fe142be78748a9e5a2348910c8afc06d65e607ce89a098adaa43499275f63510394048afa77b3fffe6add3e0038a38c3afa944169803a8d87d46adf0869412ca
+MISC ChangeLog 294 BLAKE2B ed67082f1cce20fd892916cb7ea4019e76aeb77a7f5b4da67fa956fb05ae155631e8557d9ae4ec944c6fdce5837e932df5dfabb7f9f37f585693a101b23caca9 SHA512 34bd963df021fbe729604560c466b14c39846ec0379acd61bde9a341377025273dfa099a166c4f5fbdc113b7fbd48b632ac24898ce0a51f775c3f98dc8d79961
+MISC metadata.xml 352 BLAKE2B d45c3f23945883bcb819c225e43715f5cfd86090f3e928dfb62b26a7b38b98421ee0c0d3b4fe9ebdb9de39c294cbc288c1731e9493f69436a6916034d8b834d9 SHA512 e3b9651b8f0fa3b07626b4cfb01456e4ecea1ae053ad9e9e1b3c925a5de601b35c9f3983535d62edae9ef49a40fe4c319e013542908839f30415f6ad85463e24
