@@ -8,4 +8,5 @@
 #deadline scheduler
 #xfs>ext4>btrfs
 *3.12.72
-::gentoo	base ebuild
+::gentoo		base ebuild
+::prototype99	remove i686 compatibility for now, make better use of variables, add more use flags, remove incompatible flags
